Fix compilation issues with Java 1.4.
git-svn-id: http://svn.code.sf.net/p/kolmafia/code@10616 b29ace70-8910-0410-8dcc-aa2fc6433167