@@ -138,7 +138,7 @@ public class CakeArenaFrame
 				for ( int j = 1; j <= 4; ++j )
 				{
 					Integer skill = FamiliarDatabase.getFamiliarSkill( opponentRace, j );
-					if ( skill == null ) skill = Integer.valueOf( 0 );
+					if ( skill == null ) skill = new Integer( 0 );
 					JButton opponentButton = new JButton( JComponentUtilities.getImage( skill.toString() + "star.gif" ) );
 					opponentButton.addMouseListener( new OpponentListener( i, j, skill ) );
 					opponentData[ i ][ j ] = opponentButton;
